--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-hello world!
+<head>
+<link rel="stylesheet" href="https://cdn.rawgit.com/Chalarangelo/mini.css/v3.0.1/dist/mini-default.min.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>SanTechnic</title>
+</head>
+<h1>Coming soon <small>Try again later</small></h1>
